--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,16 @@
   <head>
     <title>TODO(JS)</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <div class="input-area">
-      <input placeholder="TODOを入力" />
-      <button>追加</button>
+      <input id="add-text" placeholder="TODOを入力" />
+      <button id="add-button">追加</button>
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
-      <ul>
+      <ul id="incomplete-list">
         <li>
           <div class="list-row">
             <p>TODOです</p>
@@ -32,7 +31,7 @@
     </div>
     <div class="complete-area">
       <p class="title">完了したTODO</p>
-      <ul>
+      <ul id="complete-list">
         <li>
           <div class="list-row">
             <p>TODOでした</p>
